# aggregator

./: .env.example  .gitignore  Dockerfile  README.md  README_PLUGINS.md  docker-compose.yaml  llm_focus.md  llm_progress.md  llm_summary.md  manage.py  pyproject.toml  requirements.txt  start_docker.sh  test.py
aggregator/: __init__.py  plugin_config.py  plugin_interface.py  plugin_manager.py  run_all.py
aggregator/config/: __init__.py  config.py
aggregator/core/: __init__.py  apps.py  exceptions.py  logging.py  management.py  runner.py  signals.py
aggregator/infrastructure/: __init__.py  database.py  filesystem.py  time.py
aggregator/plugins/: __init__.py
aggregator/plugins/asana/: __init__.py  apps.py  df_to_mysql.py  get_done_tasks_df.py  models.py  plugin.py  repositories.py  services.py
aggregator/plugins/google_fit/: __init__.py  apps.py  df_to_mysql.py  models.py  plugin.py  repositories.py  services.py
aggregator/plugins/habitica/: __init__.py  apps.py  df_to_mysql.py  get_habits_dailies_df.py  get_todos_df.py  models.py  plugin.py  repositories.py  services.py
aggregator/plugins/llm_summary/: __init__.py  apps.py  formatting.py  models.py  plugin.py  repositories.py  services.py
aggregator/plugins/toggl/: apps.py  df_to_mysql.py  models.py  plugin.py  repositories.py  services.py
aggregator/settings/: __init__.py  base.py  prod.py
aggregator/utils/: formatting.py
store/sql/: asana_items.sql  habitica_items.sql
uv_app/: plugin_interface.py  plugin_manager.py  run_all.py
uv_app/config/: config.py
uv_app/plugins/asana/: df_to_mysql.py  get_done_tasks_df.py  info.txt  plugin.py
uv_app/plugins/example/: __init__.py  plugin.py
uv_app/plugins/habitica/: get_habits_dailies_df.py  get_todos_df.py  plugin.py
uv_app/plugins/samsung_health/: __init__.py  df_to_mysql.py  plugin.py
(+50 files in other folders)
